feat: 특정 미팅 조회시 참여하는 사용자 이름을 반환